--- a/readme
+++ b/readme
@@ -1,6 +1,6 @@
  Pretendo compreender melhor as propriedades do CSS e HTML, criando uma Landing Page simples de acordo com meu nível de iniciante.
 
-  Apo´s o evento que participei da Rocketseat percebi que não tem outro modo de fixar o que aprendi sem praticar.
+  Após o evento que participei da Rocketseat percebi que não tem outro modo de fixar o que aprendi sem praticar.
 
   Coisas que ja aprendi ao longo deste projeto.
 
@@ -14,4 +14,3 @@
 
   Criando um hover para a tag <p> com o intuito de o conteúdo aparecer quando o mouse estiver sobre a img.
 
-  
