--- a/readme
+++ b/readme
@@ -14,5 +14,9 @@
 
   Criei uma pausa no Carrossel quando o mouse estiver sobre a img e criei um transform: scale(1.2) para a imagem crescer.
 
-  Criando um hover para a tag <p> com o intuito de o conteúdo aparecer quando o mouse estiver sobre a img.
+  Criando um hover para a tag <p> com o intuito do conteúdo aparecer quando o mouse estiver sobre a img.
+
+  Utilizando visibility:hidden 
+
+  e Visibility:visible;
 
