--- a/readme
+++ b/readme
@@ -50,3 +50,6 @@
   criando um efeito hover nos clientes, o objetivo é passar o mouse sobre os clientes e aparecer as avaliações deles.
 
   justify-content:space-around; no menu
+
+  Primeira Landing - Page concluída.
+  Foi um desafio para mim mesma para entender como a ferramenta css funciona.
